<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seed_phrase_title">There will be a test</string>
    <string name="seed_phrase_sub_title">Please carefully write down these 12 words below in numerical order (1-12) and store your secret phrase securely.\n\nYou will confirm them in order on the next screen.</string>
    <string name="seed_phrase_btn">I’ve written it down</string>
    <string name="confirm_seed_phrase_title">This is the test</string>
    <string name="confirm_seed_phrase_sub_title">Tap the words in numerical order (1-12) to verify your recovery phrase</string>
    <string name="confirm_seed_phrase_btn">Continue</string>
    <string name="notify_seed_phrase_dialog_title">Written the Secret Phrase down?</string>
    <string name="notify_seed_phrase_dialog_sub_title">Without the secret recovery phrase you will not able to access your key or any assets associated with it.</string>
    <string name="notify_seed_phrase_dilog_check_again">Check Again</string>
    <string name="notify_seed_phrase_dilog_yes">Yes</string>
    <string name="seed_phrase_sub_title_highlight">in order</string>
    <string name="cong_dialog_title">Congratulation!</string>
    <string name="cong_dialog_subtitle">"Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut  "</string>
    <string name="cong_dialog_desc">This extra layer of security helps prevent someone with your phone from accessing your funds</string>
    <string name="cong_dialog_create">Create Pin Code</string>
    <string name="cong_dialog_skip"><u>Skip for now</u></string>
    <string name="create_handle_count">1 of 3</string>
    <string name="create_handle_title">Create Digital Identity</string>
    <string name="create_handle_desc">"Your unique handle is how others will find you across the social web and will be universal across apps. "</string>
    <string name="create_handle_input_label">Claim your handle</string>
    <string name="create_handle_input_info">Handle must be between 4-16 characters &amp; can only consist of letters, numbers, and underscores.</string>
    <string name="create_handle_skip"><u>Skip for now (Not Recomended)</u></string>
    <string name="confirm_handle_count">2 of 3</string>
    <string name="confirm_handle_title">Create Digital Identity</string>
    <string name="confirm_handle_desc">Confirm your Handle</string>
    <string name="confirm_handle_prefix">neverendingwinter</string>
    <string name="confirm_handle_postfix">. ##</string>
    <string name="confirm_handle_info">The numerical suffix is auto-assigned by Amplica Access to make sure every handle is unique. They will not be visible in some cases.</string>
    <string name="terms_handle_count">3 of 3</string>
    <string name="terms_handle_title">Create Digital Identity</string>
    <string name="terms_handle_desc">Agree to Terms</string>
    <string name="terms_handle_agree_title">By agreeing, you grant Amplica access \nto your digital identity to:</string>
    <string name="terms_handle_agree_desc">\u25CF Update your handle and profile information\n\u25CF Update your contacts &amp; groups\n\nYou may update permissions at any time.</string>
    <string name="terms_handle_bottom_text">By signing up, you agree to Amplica Access\n<u>Terms</u> and <u>Privacy Policy</u> . <u>Learn More</u></string>
    <string name="terms_handle_agree">Agree</string>

</resources>