<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_bg"
        android:layout_width="200dp"
        android:layout_height="61dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/amplica_connect_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_round_top_left_right"
        android:elevation="4dp"
        android:paddingVertical="27dp"
        android:paddingLeft="36dp"
        android:paddingRight="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bg"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/counts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/confirm_handle_count"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:translationZ="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/confirm_handle_title"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            android:translationZ="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/counts" />

        <TextView
            android:id="@+id/confirm_handle_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/confirm_handle_desc"
            android:textColor="@color/text_black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/confirm_handle_prefix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/confirm_handle_prefix"
            android:textColor="@color/text_active"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_handle_label" />

        <TextView
            android:id="@+id/confirm_handle_postfix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/confirm_handle_postfix"
            android:textColor="@color/text_inactive"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/confirm_handle_prefix"
            app:layout_constraintStart_toEndOf="@+id/confirm_handle_prefix"
            app:layout_constraintTop_toTopOf="@+id/confirm_handle_prefix" />

        <io.novafoundation.nova.common.view.PrimaryButton
            style="@style/Widget.Nova.Button.Primary"
            android:id="@+id/confirm_handle_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:text="@string/common_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_handle_prefix" />

        <TextView
            android:id="@+id/landing_restore_dsnp_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/confirm_handle_info"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="@+id/confirm_handle_next"
            app:layout_constraintStart_toStartOf="@+id/confirm_handle_next"
            app:layout_constraintTop_toBottomOf="@+id/confirm_handle_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>