<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/verify_bottom_sheet_bg"
    android:backgroundTint="@color/text_black">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/notify_seed_phrase_dialog_title"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/notify_seed_phrase_dialog_sub_title"
        android:textColor="@color/text_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16sp"
        android:background="@color/input_field_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="48dp"
        android:layout_marginTop="16sp"
        android:background="@color/input_field_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title" />

    <TextView
        android:id="@+id/check_again"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/notify_seed_phrase_dilog_check_again"
        android:textColor="@color/verify_dialog_btn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/yes"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/notify_seed_phrase_dilog_yes"
        android:textColor="@color/verify_dialog_btn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>