<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/top_bg"
        android:layout_width="200dp"
        android:layout_height="61dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/amplica_connect_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:layout_height="0dp"
        android:paddingVertical="27dp"
        android:paddingLeft="36dp"
        android:paddingRight="21dp"
        android:background="@drawable/bg_round_top_left_right"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bg">

        <TextView
            android:id="@+id/counts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/create_handle_count"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:translationZ="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/create_handle_title"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            android:translationZ="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/counts" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/create_handle_desc"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:translationZ="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/handle_input_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/create_handle_input_label"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:translationZ="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc" />

        <EditText
            android:id="@+id/input_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="15dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/bg_input_field"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/handle_input_label" />

        <TextView
            android:id="@+id/input_field_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/create_handle_input_info"
            android:textColor="@color/text_black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/input_field"
            app:layout_constraintStart_toStartOf="@+id/input_field"
            app:layout_constraintTop_toBottomOf="@+id/input_field" />

        <io.novafoundation.nova.common.view.PrimaryButton
            android:id="@+id/create_handle_next"
            style="@style/Widget.Nova.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/common_next"
            app:layout_constraintEnd_toEndOf="@+id/input_field"
            app:layout_constraintStart_toStartOf="@+id/input_field"
            app:layout_constraintTop_toBottomOf="@+id/input_field_info" />

        <TextView
            android:id="@+id/create_handle_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/create_handle_skip"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:translationZ="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_handle_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>